<resources>
    <string name="app_name">TableLayoutTest</string>
    <string name="enter_android_version">Enter Android Version</string>
    <string name="enter_android_code_name">Enter Android code name</string>
    <string name="btn_add_text">Add</string>
    <string name="version">Version</string>
    <string name="code_name">Code Name</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email_address_required">Email address (required)</string>
    <string name="password_required">Password (required)</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="btn_sign_in_text">Sign in</string>
    <string name="btn_create_new_account_text">Create new Account</string>
</resources>