<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/androidVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_android_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/androidVersionCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_android_code_name"
        app:layout_constraintEnd_toEndOf="@+id/androidVersion"
        app:layout_constraintStart_toStartOf="@+id/androidVersion"
        app:layout_constraintTop_toBottomOf="@+id/androidVersion" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_add_text"
        app:layout_constraintEnd_toEndOf="@+id/androidVersionCode"
        app:layout_constraintStart_toStartOf="@+id/androidVersionCode"
        app:layout_constraintTop_toBottomOf="@+id/androidVersionCode" />

    <TableLayout
        android:id="@+id/tableRow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/addBtn"
        app:layout_constraintStart_toStartOf="@+id/addBtn"
        app:layout_constraintTop_toBottomOf="@+id/addBtn">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/version"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/code_name"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>